syntax = "proto3";

package service;
option go_package="./oss_service";


service Oss{
  rpc CreatUpToken(CreateUpTokenRequest) returns (CreateUpTokenResponse); // 创建上传凭证
}

message CreateUpTokenRequest {
  string bucket = 1; // 存储空间名
  string key = 2; // 文件名
  int64 expires = 3; // 有效期
}

message CreateUpTokenResponse {
  string token = 1; // 上传凭证
}
